# fiv

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
pkg/aur/: PKGBUILD
src/: config.rs  decode.rs  main.rs  preload.rs  render.rs  slot.rs  state.rs  store.rs
